# Coel_OLD

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  imgui.ini  premake5.lua  vcpkg.json
Assets/Objects/suzanne/: suzanne.mtl
Assets/Textures/: sheet.xcf
Coeleditor/: GUI.hpp  main.cpp  premake5.lua
Coeleditor/src/: main.cpp
Coelengine/: CMakeLists.txt  premake5.lua
Coelengine/include/: Coel.hpp
Coelengine/src/: CMakeLists.txt  Coel.hpp  clpch.hpp  pch.hpp
Coelengine/src/Coel/: Application.cpp  Application.hpp  Camera.cpp  Core.hpp  Entry.hpp  Events.hpp  Layer.cpp  Layer.hpp  Model.cpp  Model.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
Coelengine/src/Coel/Events/: AppEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Coelengine/src/Coel/Graphics/: Buffers.cpp  Buffers.hpp  Context.hpp  FrameBuffer.hpp  IndexBuffer.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexBuffer.hpp
Coelengine/src/Coel/Graphics/DirectX/: Context.cpp  Context.hpp
Coelengine/src/Coel/Graphics/Metal/: Context.cpp  Context.hpp
Coelengine/src/Coel/Graphics/OpenGL/: Context.cpp  Context.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Shader.cpp  VertexBuffer.cpp  VertexBuffer.hpp
Coelengine/src/Coel/Graphics/Vulkan/: Context.cpp  Context.hpp
Coelengine/src/Coel/Internals/: AppCallbacks.hpp  EventCallbacks.hpp
Coelengine/src/Coel/Internals/Utilities/: Log.hpp
Coelengine/src/Coel/Platform/Linux/: Window.cpp  Window.hpp
Coelengine/src/Coel/Platform/MacOS/: Window.cpp  Window.hpp
Coelengine/src/Coel/Platform/Windows/: Window.cpp  Window.hpp
Coelengine/src/Coel/RenderAPI/: Context.hpp
Coelengine/src/Coel/RenderAPI/DirectX/: Context.cpp  Context.hpp
Coelengine/src/Coel/RenderAPI/Metal/: Context.cpp  Context.hpp
Coelengine/src/Coel/RenderAPI/OpenGL/: Context.cpp  Context.hpp
Coelengine/src/Coel/RenderAPI/Vulkan/: Context.cpp  Context.hpp
Coelengine/src/Coel/Renderer/: Buffer.cpp  Buffer.hpp  Context.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Texture.cpp  Texture.hpp
Coelengine/src/Coel/Renderers/: Sprite.cpp  Sprite.hpp
Coelengine/src/Coel/Renderers/ImGui/: ImGuiRenderer.cpp  ImGuiTextEditor.hpp  imgui_impl_glfw.cpp
Coelengine/src/Coel/Utilities/: LoadFile.hpp  Log.hpp  Timer.hpp
Examples/: CMakeLists.txt  Shader.cpp  Triangle.cpp  Window.cpp
Examples/1_GettingStarted/1_Window/: 1_Simple.cpp  2_Clear.cpp  3_Events.cpp
Examples/1_GettingStarted/2_Triangle/: 1_Simple.cpp  2_Indexed.cpp
Examples/1_GettingStarted/3_Shader/: 1_Simple.cpp  2_Uniform.cpp  3_Varying.cpp
Examples/1_GettingStarted/4_Texture/: 1_Simple.cpp  2_Filtering.cpp  2_Multiple.cpp  3_Wrapping.cpp  4_Multiple.cpp
Examples/1_GettingStarted/5_Model/: 0_Player.hpp  1_Simple.cpp  2_Textured.cpp
Examples/1_GettingStarted/6_PostProcess/: 1_Invert.cpp  2_Sharpen.cpp  3_SimpleBlur.cpp  4_GaussianBlur.cpp  5_Deferred.cpp  6_SSAO.cpp  6_SuperSample.cpp  7_SSAO.cpp
Examples/1_GettingStarted/6_PostProcess/0_Common/: Scene.hpp  Ssao.hpp
Examples/1_GettingStarted/6_PostProcess/0_Common/Shaders/: Deferred.hpp  Simple.hpp
Examples/1_GettingStarted/7_Text/: 1_Simple.cpp  2_Input.cpp  3_ImGui.cpp
Examples/1_GettingStarted/8_Renderers/: 2_Batch2d.cpp  3_CustomBatch.cpp  4_Sprites.cpp
Examples/1_GettingStarted/9_ImGui/: 1_Demo.cpp  2_Dockspace.cpp
Examples/2_Lighting/1_Phong/: 1_Diffuse.cpp  2_Specular.cpp  3_Combined.cpp
Examples/2_Lighting/2_Fog/: 1_Simple.cpp
Examples/2_Lighting/3_Shadow/: 0_Player.hpp  1_Simple.cpp  2_Vxgi.cpp
Examples/2_Lighting/4_AmbientOcclusion/: 1_SSAO.cpp
Examples/2_Lighting/5_PBR/: 1_BRDF.cpp
Examples/3_RealWorld/1_TerrainGen/: 1_PlaneGen.cpp  2_HeightMap.cpp
Examples/3_RealWorld/1_TerrainGen/0_Resources/: Player.hpp  Shaders.hpp
Examples/3_RealWorld/1_UserInterface/: Main.cpp
Examples/3_RealWorld/2_MarchingCubes/: 1_PointGen.cpp
Examples/3_RealWorld/3_Platformer/: Main.cpp  old.cpp
Examples/3_RealWorld/4_Bezier/: Main.cpp
Examples/3_RealWorld/4_Splines/: 1_Bezier.cpp  2_CatmullRom.cpp
Examples/3_RealWorld/5_Minecraft/: 1_Renderer.cpp  2_Player.cpp
Examples/3_RealWorld/5_Minecraft/0_Resources/1_Renderer/: Renderer.hpp  Shaders.hpp
Examples/3_RealWorld/5_Minecraft/0_Resources/2_Player/: Player.hpp
Examples/3_RealWorld/6_SpriteAnimation/: 1_SpriteAnimation.cpp
Examples/3_RealWorld/7_CellularAutomata/: 1_gameoflife.cpp  2_CellEditor.cpp
Examples/Fbo/: Blur.cpp  Gaussian.cpp  GaussianShaders.hpp  Simple.cpp
Examples/Ibo/: Dynamic.cpp  Static.cpp
Examples/Imgui/: Main.cpp
Examples/Main/: Main.cpp
Examples/Misc/: Particles.cpp
Examples/Model/: Shaders.hpp  loadObj.cpp
Examples/Raymarch/: Frag.hpp  Main.cpp  OldRaymarch.cpp  Vert.hpp
Examples/Renderer/: Batch2d.cpp
Examples/Texture/: Quad.cpp  Shaders.hpp
Examples/TexturedQuad/: Main.cpp  Shaders.hpp
Examples/Vbo/: Dynamic.cpp  Static.cpp
Examples/Window/: Main.cpp
Projects/: CMakeLists.txt
Projects/3D/: Main.cpp  Shaders.hpp  imGuIZMOquat.cpp  imGuIZMOquat.h  vGizmo.h  vgConfig.h
Projects/DropShadow/: Main.cpp
Projects/Editor/: Main.cpp  Node.hpp  Shaders.hpp  Wire.hpp
Projects/Graph/: Main.cpp  Shaders.hpp
Projects/Minecraft/: Chunk.cpp  Chunk.hpp  Game.cpp  Game.hpp  Main.cpp  Player.cpp  Player.hpp
Projects/Minecraft/Assets/: Shaders.hpp
Projects/Minecraft/Chunk/: Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shaders.hpp
Projects/Physics/: Main.cpp  Shaders.hpp  Visualized.cpp
Projects/Planet/: Main.cpp  Player.hpp  Random.hpp  Shaders.hpp
Projects/Raymarch/: Main.cpp  Shaders.hpp
Projects/Shadows/: Main.cpp  Shaders.hpp
Projects/Text/: Main.cpp
Projects/Tiles/: Main.cpp  Noise.hpp  Shaders.hpp
Tests/: CMakeLists.txt  CoelTest.cpp  Main.cpp
assets/: dropShadow.frag  dropShadow.vert
test/: CMakeLists.txt  premake5.lua
test/src/: test.cpp
