
link_libraries(Coelengine)

add_executable(Editor Editor/Main.cpp)
add_executable(Physics Physics/Main.cpp)
add_executable(PhysicsVisual Physics/Visualized.cpp)
add_executable(Tiles Tiles/Main.cpp)
add_executable(TextTest Text/Main.cpp)
add_executable(Raymarch Raymarch/Main.cpp)
add_executable(Graph Graph/Main.cpp)
add_executable(Shadows Shadows/Main.cpp)
add_executable(DropShadow DropShadow/Main.cpp)
add_executable(Minecraft Minecraft/Main.cpp)
add_executable(Planet Planet/Main.cpp)
